Fixed location wrap issue

--- a/client/src/styles/About.css
+++ b/client/src/styles/About.css
@@ -91,3 +91,7 @@
   /* margin: 0 !important; */
   /* padding: 0 !important; */
 }
+
+.location {
+  white-space: nowrap;
+}
